--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -5,12 +5,12 @@
 {% block body %}
     <style>
         body {
-            background-color: rgba(77, 185, 236, 0.73);
+            background: linear-gradient(to right, #085a6c, #011a88);
             font-family: 'Ubuntu', sans-serif;
         }
 
         .main {
-            background-color: rgba(115, 110, 110, 0.44);
+            background: linear-gradient(to right, #8fd9e8, #16759f);
             width: 400px;
             height: 400px;
             margin: 7em auto;
@@ -121,22 +121,7 @@
         </div>
     {% endif %}
 
-    <h1 align="center" style="color: #0f6674" class="h3 mb-3 font-weight-normal">Please sign in</h1>
-
-
-{#    <div class="login-form">#}
-{#            <h1>Login</h1>#}
-{#            <div class="content">#}
-{#                <div class="input-field">#}
-{#                    <label for="inputEmail">Email</label>#}
-{#                    <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" autocomplete="email" required autofocus>#}
-{#                </div>#}
-{#                <div class="input-field">#}
-{#                    <label for="inputPassword">Password</label>#}
-{#                    <input type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password" required>#}
-{#                </div>#}
-{#            </div>#}
-{#    </div>#}
+    <h1 align="center" style="color: #13aecc;" class="h3 mb-3 font-weight-normal">Welcome in Embedded Systems!</h1>
 
     <div class="main">
         <p class="sign" align="center">Sign in</p>
